# api

./: README.rst  pyproject.toml
.github/workflows/: action.yml
docsrc/: conf.py  index.rst  intro.rst
docsrc/modules/: index.rst
src/phiarchitect/phiarchitect_api/: __init__.py  app.py  phiarchitect_api.py
