[project]
name = "phiarchitect-api"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "source for api.phiarchitect.com"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
api = "phiarchitect.phiarchitect_api.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phiarchitect"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "phiarchitect.phiarchitect_api.__version__"}

[project.urls]
"Website" = "https://phiarchitect.github.io/api"
"Repository" = "https://github.com/phiarchitect/api"
"Issues" = "https://github.com/phiarchitect/api/issues"